# saudi-data-pulse

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  metabase.Dockerfile  pyproject.toml  warehouse.duckdb
.github/workflows/: ci.yml  deploy-api.yml  pipeline.yml
api/: Dockerfile  main.py
docs/: index.html
docs/dbt/: index.html
exports/: econ.json  market_summary.json  meta.json  weather_daily.json
lake/raw/econ_indicators/snapshot/: part.parquet
lake/raw/tadawul/date=2026-01-01/: part.parquet
lake/raw/tadawul/date=2026-01-04/: part.parquet
lake/raw/tadawul/date=2026-01-05/: part.parquet
lake/raw/tadawul/date=2026-01-06/: part.parquet
lake/raw/tadawul/date=2026-01-07/: part.parquet
lake/raw/tadawul/date=2026-01-08/: part.parquet
lake/raw/tadawul/date=2026-01-11/: part.parquet
metabase-plugins/: sample-database.db.mv.db
orchestration/: definitions.py  resources.py  schedules.py  sensors.py
orchestration/assets/: dbt_assets.py
orchestration/assets/ingestion/: econ.py  tadawul.py  weather.py
scripts/: backfill_tadawul.py  export_json.py
tests/: test_econ.py  test_resources.py  test_tadawul.py  test_weather.py
transform/: .user.yml  dbt_project.yml  packages.yml  profiles.yml
transform/models/: sources.yml
transform/models/marts/: daily_market_summary.sql  schema.yml  weather_daily_summary.sql
transform/models/staging/: schema.yml  stg_econ_indicators.sql  stg_tadawul_prices.sql  stg_weather.sql
transform/tests/: assert_positive_close_prices.sql
(+157 files in other folders)
