[project]
name = "saudi-data-pulse"
version = "0.1.0"
description = "Real-time analytics platform for Saudi open data: Tadawul market data, GASTAT statistics, and weather, orchestrated with Dagster and transformed with dbt on DuckDB."
requires-python = ">=3.11"
dependencies = [
    "dagster>=1.8",
    "dagster-webserver>=1.8",
    "dagster-dbt>=0.24",
    "dbt-duckdb>=1.8",
    "duckdb>=1.0",
    "yfinance>=0.2.40",
    "pandas>=2.0",
    "pyarrow>=15.0",
    "fastapi>=0.110",
    "uvicorn>=0.29",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
    "pytest>=8.0",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["orchestration*", "api*"]

[tool.dagster]
module_name = "orchestration.definitions"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
